# agentic-ai-generic-project-template

./: .env.example  README.md  generate_tree.py  missing_structure_creation.py  project_structure_generator.py  pyproject.toml  tree_output.txt
app/backend/src/: README.md  langgraph.json  log_config.yaml  pyproject.toml
app/backend/src/agents/: README.md
app/backend/src/agents/agent_one/: README.md  config.py  graph.py
app/backend/src/agents/agent_two/: README.md  graph.py
app/backend/src/api/: README.md  deps.py
app/backend/src/api/v1/: README.md  agents.py  health.py  router.py  runs.py  schemas.py  workflows.py
app/backend/src/app/: README.md  api.py  lifecycle.py  main.py
app/backend/src/auth/: README.md  azure_ad.py
app/backend/src/config/: README.md
app/backend/src/core/: README.md  exceptions.py  settings.py
app/backend/src/edges/: README.md  conditional.py
app/backend/src/graphs/: README.md  entrprise_complaince_graph.py
app/backend/src/graphs/state/: README.md  shared.py
app/backend/src/guardrails/: README.md  output_guard.py
app/backend/src/llm/: README.md
app/backend/src/llm/providers/: README.md  (+2 more)
app/backend/src/nodes/: README.md  base.py  compliance.py  ingestion.py  risk.py  summary.py
app/backend/src/observability/: README.md  tracing.py
app/backend/src/policies/: README.md
app/backend/src/prompts/: README.md  compliance_prompt.py  risk_prompt.py  summary_propmt.py
app/backend/src/services/: README.md  compliance_service.py
app/backend/src/storage/: README.md
app/backend/src/tools/: README.md  llm.py  registry.py
(+46 files in other folders)
