[tool.poetry]
name = "agentic-ai-backend"
version = "0.1.0"
description = "Backend for Agentic AI Platform using FastAPI + LangGraph"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.3.0"
langgraph = "^0.2.0"          # Replace with actual LangGraph version
langsmith = "^0.1.0"          # Replace with actual LangSmith version
requests = "^2.31.0"
python-dotenv = "^1.0.0"
msal = "^2.23.0"               # For Azure AD authentication
httpx = "^0.26.2"              # HTTP client for external API calls

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^24.3.0"
isort = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
